<resources>
    <string name="app_name">OTA Challenge</string>
    <string name="user_name">Sung Jin Woo</string>
    <string name="progress">60%</string>
    <string name="flame">100</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="journey">Journey</string>
    <string name="placeholder_level">Level 1</string>
    <string name="placeholder_level_title">Find your tools</string>
    <string name="placeholder_level_description">Collect the best ways to notice and manage anger</string>
    <string name="placeholder_activity_title">Activity title</string>

    <string name="level_n">LEVEL %d</string>
</resources>