<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="level"
            type="com.neds.otachallenge.data.views.LevelView" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/level_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/img_level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/guide_level"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toBottomOf="@+id/level_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            style="@style/Text.Small.Light"
            android:background="@drawable/background_level"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:paddingEnd="12dp"
            android:paddingBottom="4dp"
            android:text="@{@string/level_n(level.level)}"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_level"
            tools:text="@string/placeholder_level" />

        <TextView
            android:id="@+id/title"
            style="@style/Text.Large"
            android:layout_marginTop="48dp"
            android:text="@{level.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level_img"
            tools:text="@string/placeholder_level_title" />

        <TextView
            android:id="@+id/description"
            style="@style/Text.Medium.Tertiary"
            android:layout_width="0dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:gravity="center"
            android:text="@{level.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/placeholder_level_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:spanCount="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>