<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="16dp"
            android:paddingEnd="20dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/user_name"
                style="@style/Text.Medium"
                android:layout_marginStart="16dp"
                android:text="@string/user_name"
                app:layout_constraintBottom_toTopOf="@+id/progress"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mackhartley.roundedprogressbar.RoundedProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="96dp"
                android:layout_height="6dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/progress"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@+id/progress"
                app:rpbBackgroundColor="@color/progress_bar_background"
                app:rpbCornerRadius="20dp"
                app:rpbProgress="60"
                app:rpbProgressColor="@color/progress_bar_progress"
                app:rpbShowProgressText="false" />

            <TextView
                android:id="@+id/progress"
                style="@style/Text.Small.Special"
                android:layout_marginStart="8dp"
                android:text="@string/progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/progress_bar"
                app:layout_constraintTop_toBottomOf="@id/user_name" />

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:background="@drawable/background_profile_picture"
                android:padding="12dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Text.Medium.Special"
                android:layout_marginEnd="16dp"
                android:drawablePadding="8dp"
                android:text="@string/flame"
                app:drawableStartCompat="@drawable/ic_fire"
                app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
                app:layout_constraintEnd_toStartOf="@+id/profile_picture"
                app:layout_constraintTop_toTopOf="@+id/profile_picture" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.neds.otachallenge.ui.widgets.DayIndicator
            android:id="@+id/day_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/top_container" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/journey_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/stroke_weight"
                android:background="@color/strokeColor"
                app:layout_constraintBottom_toTopOf="@+id/journey" />

            <TextView
                android:id="@+id/journey"
                style="@style/Text.Small.Special"
                android:layout_width="match_parent"
                android:background="?selectableItemBackground"
                android:drawablePadding="4dp"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/journey"
                app:drawableTopCompat="@drawable/ic_journey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/journey_container"
            app:layout_constraintTop_toBottomOf="@+id/day_indicator" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>